<resources>
    <string name="app_name"></string>
    <string name="app_name2">OSCILLATE</string>
    <string name="name_name">Name</string>


    <string name="button_login">Login</string>
    <string name="button_signup">Sign Up</string>
    <string name="HomeScreenPic">HomeScreenPic</string>
    <string name="email_name">Enter your email</string>
    <string name="email_display">Email: </string>
    <string name="password_display">Password: </string>
    <string name="password_name">Enter your password</string>
    <string name="record_run">Lets Go!</string>
    <string name="walk_run">WALK</string>
    <string name="run_run">RUN</string>
    <string name="end_run">Stop</string>
    <string name="pause_run">Pause</string>
    <string name="save_run">Save</string>
    <string name="unknown_activity">Unknown Activity</string>
    <string name="overall_run">Run Summary</string>
    <string name="welcome">Welcome </string>
    <string name="distance">Distance </string>
    <string name="distance2">Distance (miles)</string>
    <string name="run2mins">Run for 20 seconds</string>
    <string name="walk2mins">Walk for 20 seconds</string>
    <string name="start">Start</string>

    <string name="time">Time </string>
    <string name="day">Date </string>
    <string name="pace">Pace </string>
    <string name="pace2">Pace (min/mile)</string>
    <string name="finish">Finish </string>
    <string name="activity_unknown">unknown </string>
    <string name="activity_running">running </string>
    <string name="activity_walking">walking </string>
    <string name="activity_still">still </string>
    <string name="password_display2">Re-enter password:</string>
    <string name="results2">Results:</string>


    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_record">Record</string>
    <string name="title_logout">Logout</string>
    <string name="title_bin">Delete</string>
    <string name="title_login"><u>Login</u></string>
    <string name="title_signup"><u>Sign Up</u></string>
    <string name="title_calibrate">Calibrate</string>

    <string name="overall">O</string>
    <string name="walkOverall">W</string>
    <string name="runOverall">R</string>

    <string name="alreadyamember">Already a member?</string>
    <string name="notamember">Not a member?</string>

    <string name="whattodo">What would you like to do?</string>
    <string name="calibration">CALIBRATE</string>
    <string name="record">RECORD</string>
    <string name="results">VIEW RESULTS</string>
    <string name="title_activity_maps">Map</string>
    <string name="calibrateFirst">Please Calibrate First!</string>

    <string name="hms">hms</string>
    <string name="distanceUnits">miles</string>
    <string name="paceUnits">min/mile</string>

    <string name="next">Next</string>



</resources>
