<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/run2mins"
        android:layout_width="237dp"
        android:layout_height="53dp"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="112dp"
        android:text="@string/run2mins"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/start"
        style="@style/btn2"
        android:layout_width="239dp"
        android:layout_height="61dp"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="268dp"
        android:text="@string/start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/finish"
        style="@style/btn2"
        android:layout_width="239dp"
        android:layout_height="61dp"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="76dp"
        android:text="@string/save_run"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start" />

    <TextView
        android:id="@+id/mTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="188dp"
        android:layout_marginStart="188dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/run2mins" />
</android.support.constraint.ConstraintLayout>